--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
     <body>
 	    <h1>CSS 가이드</h1>
 	    <h2>첫수업</h2>
+	    <script>
+	    	window.onload() {
+	    		
+	    	}
+	    </script>
     </body>
 </html>
