--- a/index.html
+++ b/index.html
@@ -17,5 +17,13 @@
     <body>
 	    <h1>CSS 가이드</h1>
 	    <h2>첫수업</h2>
+	    <div>
+	    	<ul>
+	    		<li>menu1</li>
+	    		<li>menu2</li>
+	    		<li>menu3</li>
+	    		<li>menu4</li>
+	    	</ul>
+	    </div>
     </body>
 </html>
