데이타 테이블 추가

--- a/index.html
+++ b/index.html
@@ -26,5 +26,17 @@
 	    	</ul>
 	    </div>
 	    <article>ㅋㅋㅋ</article>
+	    <table>
+	    	<thead>
+	    		<th>1</th>
+	    		<th>2</th>
+	    		<th>3</th>
+	    	</thead>
+	    	<tbody>
+	    		<td></td>
+	    		<td></td>
+	    		<td></td>
+	    	</tbody>
+	    </table>
     </body>
 </html>
